# typeclass

./: .gitignore  Dockerfile  LICENSE  README.md  __main__.py  enter.sh  pyproject.toml  test.sh  unittest.sh
.github/workflows/: ci.yml  publish.yml  tests.yml
protocols/: functor.py
src/typeclass/: __init__.py  __main__.py
src/typeclass/data/: automorphism.py  either.py  endomorphism.py  function.py  isomorphism.py  maybe.py  morphism.py  parser.py  random.py  reader.py  seq.py  sequence.py  stream.py  streamtree.py  thunk.py  tree.py  willowtree.py  writer.py
src/typeclass/interpret/: interpreter.py  run.py
src/typeclass/laws/: monad.py
src/typeclass/protocols/: applicative.py  arrow.py  arrowapply.py  arrowchoice.py  arrowloop.py  category.py  comonad.py  eq.py  functor.py  group.py  groupoid.py  monad.py  monoid.py  semigroupoid.py  show.py
src/typeclass/runtime/: core.py
src/typeclass/syntax/: alternative.py  applicative.py  arrow.py  arrowapply.py  arrowchoice.py  category.py  comonad.py  functor.py  group.py  groupoid.py  infix.py  monad.py  monoid.py  semigroup.py  semigroupoid.py  symbols.py  value.py
src/typeclass/tests/: test_automorphism.py  test_either.py  test_endomorphism.py  test_identity.py  test_isomorphism.py  test_laws_maybe.py  test_maybe.py  test_morphism.py  test_state.py  (+8 more)
typeclass/data/: maybe.py  thunk.py
typeclass/interpret/: interpreter.py
typeclass/laws/: applicative.py  functor.py
typeclass/protocols/: alternative.py  applicative.py  functor.py
typeclass/syntax/: alternative.py  applicative.py  functor.py  symbols.py
(+113 files in other folders)
